implemented background component, login page

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -73,3 +73,23 @@ button {
 a {
   text-decoration: none;
 }
+
+@keyframes loading {
+  to {transform: rotate(360deg);}
+}
+
+.loading:before {
+  content: '';
+  box-sizing: border-box;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 20px;
+  height: 20px;
+  margin-top: -10px;
+  margin-left: -10px;
+  border-radius: 50%;
+  border: 2px solid #ffffff;
+  border-top-color: #000000;
+  animation: loading .8s linear infinite;
+}
