--- a/frontend/src/app/modules/auth/login/login.component.html
+++ b/frontend/src/app/modules/auth/login/login.component.html
@@ -4,28 +4,28 @@
       Skyrim Market
     </div>
 
-    <div class="login__form">
+    <form class="login__form" [formGroup]="form" [class.loading]="loading">
       <div class="form-control">
         <label for="username">Username</label>
 
-        <input id="username" type="text">
+        <input id="username" type="text" formControlName="username">
       </div>
 
       <div class="form-control">
         <label for="password">Password</label>
 
-        <input id="password" type="password">
+        <input id="password" type="password" formControlName="password">
       </div>
 
       <div class="login__form__submit">
-        <button>Login</button>
+        <button (click)="submit()">Login</button>
 
         <div class="login__form__submit__redirect">
-          <a href="#">Register</a>
+          <a routerLink="login">Register</a>
           <span> | </span>
-          <a href="#">Forgot Password?</a>
+          <a routerLink="login" href="#">Forgot Password?</a>
         </div>
       </div>
-    </div>
+    </form>
   </div>
 </app-background>
