--- a/frontend/src/app/modules/auth/login/login.component.html
+++ b/frontend/src/app/modules/auth/login/login.component.html
@@ -14,7 +14,7 @@
       <div class="form-control">
         <label for="password">Password</label>
 
-        <input id="password" type="password" formControlName="password">
+        <input id="password" type="password" autocomplete formControlName="password">
       </div>
 
       <div class="login__form__submit">
