--- a/frontend/src/app/modules/shared/background/background.component.scss
+++ b/frontend/src/app/modules/shared/background/background.component.scss
@@ -3,9 +3,6 @@
   position: relative;
   width: 100%;
   height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 
   &__image {
     background-image: url("/assets/images/background.png");
@@ -19,5 +16,11 @@
 
   &__content {
     z-index: 1;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
   }
 }
