create order form first step

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,1 +1,9 @@
-<router-outlet></router-outlet>
+<div class="skyrim-market">
+  <div class="skyrim-market__image">
+    <img src="assets/images/background.png" alt="">
+  </div>
+
+  <div class="skyrim-market__content">
+    <router-outlet></router-outlet>
+  </div>
+</div>
