--- a/frontend/src/app/modules/auth/login/login.component.html
+++ b/frontend/src/app/modules/auth/login/login.component.html
@@ -1,31 +1,29 @@
-<app-background>
-  <div class="login">
-    <div class="login__header">
-      Skyrim Market
+<div class="login">
+  <div class="login__header">
+    Skyrim Market
+  </div>
+
+  <form class="login__form" [formGroup]="form" [class.loading]="loading">
+    <div class="form-control">
+      <label for="username">Username</label>
+
+      <input id="username" type="text" formControlName="username">
     </div>
 
-    <form class="login__form" [formGroup]="form" [class.loading]="loading">
-      <div class="form-control">
-        <label for="username">Username</label>
+    <div class="form-control">
+      <label for="password">Password</label>
 
-        <input id="username" type="text" formControlName="username">
+      <input id="password" type="password" autocomplete formControlName="password">
+    </div>
+
+    <div class="login__form__submit">
+      <button (click)="submit()">Login</button>
+
+      <div class="login__form__submit__redirect">
+        <a routerLink="">Register</a>
+        <span> | </span>
+        <a routerLink="" href="#">Forgot Password?</a>
       </div>
-
-      <div class="form-control">
-        <label for="password">Password</label>
-
-        <input id="password" type="password" autocomplete formControlName="password">
-      </div>
-
-      <div class="login__form__submit">
-        <button (click)="submit()">Login</button>
-
-        <div class="login__form__submit__redirect">
-          <a routerLink="login">Register</a>
-          <span> | </span>
-          <a routerLink="login" href="#">Forgot Password?</a>
-        </div>
-      </div>
-    </form>
-  </div>
-</app-background>
+    </div>
+  </form>
+</div>
