--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,3 +1,38 @@
+
+// Custom Theming for Angular Material
+// For more information: https://material.angular.io/guide/theming
+@use '~@angular/material' as mat;
+// Plus imports for other components in your app.
+
+// Include the common styles for Angular Material. We include this here so that you only
+// have to load a single css file for Angular Material in your app.
+// Be sure that you only ever include this mixin once!
+@include mat.core();
+
+// Define the palettes for your theme using the Material Design palettes available in palette.scss
+// (imported above). For each palette, you can optionally specify a default, lighter, and darker
+// hue. Available color palettes: https://material.io/design/color/
+$frontend-primary: mat.define-palette(mat.$indigo-palette);
+$frontend-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+
+// The warn palette is optional (defaults to red).
+$frontend-warn: mat.define-palette(mat.$red-palette);
+
+// Create the theme object. A theme consists of configurations for individual
+// theming systems such as "color" or "typography".
+$frontend-theme: mat.define-light-theme((
+  color: (
+    primary: $frontend-primary,
+    accent: $frontend-accent,
+    warn: $frontend-warn,
+  )
+));
+
+// Include theme styles for core and each component used in your app.
+// Alternatively, you can import and @include the theme mixins for each component
+// that you are using.
+@include mat.all-component-themes($frontend-theme);
+
 @import "~normalize.css";
 
 * {
@@ -11,7 +46,9 @@ html, body {
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
+  min-width: 1440px;
+  min-height: 900px;
+  font-family: 'Roboto', "Helvetica Neue", sans-serif;
   font-size: 14px;
   color: #fff;
 }
@@ -39,18 +76,38 @@ textarea:-webkit-autofill:focus, {
     color: #cccccc
   }
 
-  input {
+  input, .mat-select, textarea {
     font-size: 16px;
     height: 30px;
     line-height: 14px;
     color: #fff;
-    border: 0;
-    border-bottom: 1px solid #fff;
     background: none;
 
     &:focus {
       outline: none;
     }
+  }
+
+  input, .mat-select {
+    border: 0;
+    border-bottom: 1px solid #fff;
+  }
+
+  textarea {
+    border: 1px solid #fff;
+    border-radius: 10px;
+    margin-top: 15px;
+    resize: none;
+    padding: 8px;
+    height: 150px;
+  }
+
+  .mat-select {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    margin-top: 4px;
+    padding-bottom: 2px;
   }
 }
 
@@ -92,4 +149,13 @@ a {
   border: 2px solid #ffffff;
   border-top-color: #000000;
   animation: loading .8s linear infinite;
+}
+
+.mat-select-arrow, .mat-select-value {
+  color: #fff;
+}
+
+.required {
+  color: #fff;
+  margin-left: 2px;
 }
