add frontend modules for client orders

--- a/frontend/src/app/modules/client/orders/orders.component.html
+++ b/frontend/src/app/modules/client/orders/orders.component.html
@@ -1,1 +1,76 @@
-<p>orders works!</p>
+<div class="client-order">
+
+  <div class="orders-list">
+    <div class="form-control client-order__order">
+      <div class="order-description">
+        <a href='None' class="order-description__name">Заказ: Steal3232</a>
+        <span class="order-description__date">Дата заказа: 23.05.2021</span>
+        <span class="order-description__status">Статус заказа: выполняется</span>
+        <div class="order-description__text">Украсть меч небес</div>
+      </div>
+    </div>
+    <div class="form-control client-order__order">
+      <div class="order-description">
+        <a href='None' class="order-description__name">Заказ: Steal3232</a>
+        <span class="order-description__date">Дата заказа: 23.05.2021</span>
+        <span class="order-description__status">Статус заказа: выполняется</span>
+        <div class="order-description__text">Украсть меч небес</div>
+      </div>
+    </div>
+    <div class="form-control client-order__order">
+      <div class="order-description">
+        <a href='None' class="order-description__name">Заказ: Steal3232</a>
+        <span class="order-description__date">Дата заказа: 23.05.2021</span>
+        <span class="order-description__status">Статус заказа: выполняется</span>
+        <div class="order-description__text">Украсть меч небес</div>
+      </div>
+    </div>
+    <div class="form-control client-order__order">
+      <div class="order-description">
+        <a href='None' class="order-description__name">Заказ: Steal3232</a>
+        <span class="order-description__date">Дата заказа: 23.05.2021</span>
+        <span class="order-description__status">Статус заказа: выполняется</span>
+        <div class="order-description__text">Украсть меч небес</div>
+      </div>
+    </div>
+    <div class="form-control client-order__order">
+      <div class="order-description">
+        <a href='None' class="order-description__name">Заказ: Steal3232</a>
+        <span class="order-description__date">Дата заказа: 23.05.2021</span>
+        <span class="order-description__status">Статус заказа: выполняется</span>
+        <div class="order-description__text">Украсть меч небес</div>
+      </div>
+    </div>
+    <div class="form-control client-order__order">
+      <div class="order-description">
+        <a href='None' class="order-description__name">Заказ: Steal3232</a>
+        <span class="order-description__date">Дата заказа: 23.05.2021</span>
+        <span class="order-description__status">Статус заказа: выполняется</span>
+        <div class="order-description__text">Украсть меч небес</div>
+      </div>
+    </div>
+    <div class="form-control client-order__order">
+      <div class="order-description">
+        <a href='None' class="order-description__name">Заказ: Steal3232</a>
+        <span class="order-description__date">Дата заказа: 23.05.2021</span>
+        <span class="order-description__status">Статус заказа: выполняется</span>
+        <div class="order-description__text">Украсть меч небес</div>
+      </div>
+    </div>
+    <div class="form-control client-order__order">
+      <div class="order-description">
+        <a href='None' class="order-description__name">Заказ: Steal3232</a>
+        <span class="order-description__date">Дата заказа: 23.05.2021</span>
+        <span class="order-description__status">Статус заказа: выполняется</span>
+        <div class="order-description__text">Украсть меч небес</div>
+      </div>
+    </div>
+
+  </div>
+
+
+
+  <div class="client-order__footer">
+
+  </div>
+</div>
