--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -52,3 +52,18 @@ a {
   color: #fff;
   margin-left: 2px;
 }
+
+*::-webkit-scrollbar {
+  width: 8px;
+  border-radius: 5px;
+}
+
+*::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 5px;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #5f5f5f;
+  border-radius: 5px;
+}
