--- a/frontend/src/app/modules/client/orders/orders.component.scss
+++ b/frontend/src/app/modules/client/orders/orders.component.scss
@@ -50,5 +50,14 @@
       }
     }
   }
+
+  &__no-orders {
+    width: 100%;
+    height: 100%;
+    padding-top: 200px;
+    display: flex;
+    justify-content: center;
+    font-size: 24px;
+  }
 }
 
