--- a/frontend/src/app/modules/client/order/order.component.html
+++ b/frontend/src/app/modules/client/order/order.component.html
@@ -1,17 +1,26 @@
 <div class="client-order">
-  <form class="form-control client-order__select-service" [class.disabled]="disabled$ | async">
-    <label>Select service</label>
+  <div class="client-order__form">
+    <div class="client-order__form__info">
+      <div class="client-order__select-service form-control">
+        <label>Select service</label>
 
-    <mat-select (valueChange)="onOrderTypeChange($event)" [disabled]="disabled$ | async">
-      <mat-option *ngFor="let type of orderTypes" [value]="type.value">
-        {{type.name}}
-      </mat-option>
-    </mat-select>
-  </form>
+        <mat-select (valueChange)="onOrderTypeChange($event)" [ngModel]="orderType">
+          <mat-option *ngFor="let type of orderTypes" [value]="type.value">
+            {{type.name}}
+          </mat-option>
+        </mat-select>
+      </div>
 
-  <router-outlet></router-outlet>
+      <div *ngIf="order?.status" class="client-order__status">
+        <div class="client-order__status__header">Order status:</div>
+        <div class="client-order__status__name">{{orderStatus}}</div>
+      </div>
+    </div>
 
-  <div class="client-order__footer">
+    <app-order-form *ngIf="orderType" [orderType]="orderType"></app-order-form>
+  </div>
 
+  <div class="client-order__pay">
+    <app-pay-form *ngIf="showPayForm"></app-pay-form>
   </div>
 </div>
