--- a/frontend/src/app/modules/client/order/order.component.scss
+++ b/frontend/src/app/modules/client/order/order.component.scss
@@ -5,9 +5,33 @@
   width: 1059px;
   height: 730px;
   padding: 46px 76px;
+  display: flex;
+
+  &__form {
+    margin-left: 24px;
+
+    &__info {
+      display: flex;
+      width: 400px;
+      justify-content: space-between;
+    }
+  }
+
+  &__status {
+    font-size: 14px;
+    line-height: 16px;
+
+    &__header {
+      font-weight: 300;
+    }
+
+    &__name {
+      margin-top: 11px;
+      margin-left: 11px;
+    }
+  }
 
   &__select-service {
-    width: 200px;
-    margin-left: 24px;
+    width: 180px;
   }
 }
