--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -67,3 +67,11 @@ a {
   background-color: #5f5f5f;
   border-radius: 5px;
 }
+
+.skyrim-popup {
+  .mat-dialog-container {
+    padding: 0;
+    background: #000;
+    border-radius: 10px;
+  }
+}
