improved cors, implemented disabled form

--- a/frontend/src/app/modules/client/order/order-form/order-form.component.html
+++ b/frontend/src/app/modules/client/order/order-form/order-form.component.html
@@ -40,6 +40,9 @@
       <button class="create" (click)="onUpdateOrder()">Apply</button>
     </ng-template>
 
+    <ng-template ngSwitchCase="DECLINED">
+    </ng-template>
+
     <ng-template ngSwitchCase="APPROVED">
     </ng-template>
 
