improved cors, client module

--- a/frontend/src/app/modules/auth/login/login.component.html
+++ b/frontend/src/app/modules/auth/login/login.component.html
@@ -20,9 +20,8 @@
       <button (click)="submit()">Login</button>
 
       <div class="login__form__submit__redirect">
+        <span>No account yet</span>
         <a routerLink="">Register</a>
-        <span> | </span>
-        <a routerLink="" href="#">Forgot Password?</a>
       </div>
     </div>
   </form>
