--- a/frontend/src/app/modules/client/order/pay-form/pay-form.component.html
+++ b/frontend/src/app/modules/client/order/pay-form/pay-form.component.html
@@ -1,3 +1,21 @@
-<div class="pay-form">
+<form class="pay-form"
+      [formGroup]="form"
+      [class.loading]="loading">
+  <div class="pay-form__control price">
+    <span>TOTAL:</span>{{price}}
+  </div>
 
-</div>
+  <div class="pay-form__control payment form-control">
+    <label>Choose way to pay</label>
+    <mat-select formControlName="payment">
+      <mat-option *ngFor="let payment of payments" [value]="payment.value">
+        {{payment.name}}
+      </mat-option>
+    </mat-select>
+  </div>
+
+  <div class="pay-form__control apply">
+    <button [disabled]="form.disabled"
+            (click)="apply()">Apply</button>
+  </div>
+</form>
