--- a/frontend/src/app/modules/auth/login/login.component.scss
+++ b/frontend/src/app/modules/auth/login/login.component.scss
@@ -34,6 +34,11 @@
           font-weight: 300;
           color: #e6e6e6;
         }
+
+        span {
+          margin-right: 4px;
+          opacity: .6;
+        }
       }
     }
   }
