--- a/frontend/src/app/modules/client/order/order.component.html
+++ b/frontend/src/app/modules/client/order/order.component.html
@@ -1,10 +1,12 @@
-<div class="client-order">
-  <div class="client-order__form">
+<div class="client-order" [class.loading]="loading">
+  <div class="client-order__form" *ngIf="order">
     <div class="client-order__form__info">
-      <div class="client-order__select-service form-control">
+      <div class="client-order__select-service form-control" [class.disabled]="formDisabled">
         <label>Select service</label>
 
-        <mat-select (valueChange)="onOrderTypeChange($event)" [ngModel]="orderType">
+        <mat-select (valueChange)="onOrderTypeChange($event)"
+                    [ngModel]="orderType"
+                    [disabled]="formDisabled">
           <mat-option *ngFor="let type of orderTypes" [value]="type.value">
             {{type.name}}
           </mat-option>
@@ -20,7 +22,7 @@
     <app-order-form *ngIf="orderType" [orderType]="orderType"></app-order-form>
   </div>
 
-  <div class="client-order__pay">
-    <app-pay-form *ngIf="showPayForm"></app-pay-form>
+  <div *ngIf="showPayForm" class="client-order__pay">
+    <app-pay-form></app-pay-form>
   </div>
 </div>
