--- a/frontend/src/app/modules/client/orders/orders.component.scss
+++ b/frontend/src/app/modules/client/orders/orders.component.scss
@@ -1,63 +1,7 @@
 @import "mixins";
 
-.client-order {
+.client-orders {
   @include card();
-  width: 1059px;
-  height: 730px;
-  padding: 46px 76px;
-
-  &__list {
-    height: 600px;
-    overflow-y: auto;
-  }
-
-  &__order {
-    background: rgba(43, 43, 43, .7);
-    border-radius: 10px;
-    width: 880px;
-    height: 80px;
-    margin-bottom: 20px;
-
-    .order-description {
-      font-size: 14px;
-      padding: 20px 10px 10px 20px;
-      cursor: pointer;
-
-      * {
-        position: relative;
-      }
-
-      &__name {
-        left: 5px;
-        width: 120px;
-      }
-
-      &__date {
-        left: 140px;
-        width: 165px;
-      }
-
-      &__status {
-        left: 320px;
-        top: 11px;
-        width: 180px;
-      }
-
-      &__text {
-        left: 18px;
-        top: 8px;
-        width: 500px;
-      }
-    }
-  }
-
-  &__no-orders {
-    width: 100%;
-    height: 100%;
-    padding-top: 200px;
-    display: flex;
-    justify-content: center;
-    font-size: 24px;
-  }
+  @include order-list();
 }
 
