--- a/frontend/src/app/modules/employee/available-orders/available-orders.component.html
+++ b/frontend/src/app/modules/employee/available-orders/available-orders.component.html
@@ -1,13 +1,10 @@
-<div class="client-order">
-
-  <div class="client-order__list">
-    <div class="form-control client-order__order">
-      <div class="order-description">
-        <span class="order-description__name">Заказ: Steal3232</span>
-        <span class="order-description__date">Дата заказа: 23.05.2021</span>
-        <span class="order-description__status">Стоимость заказа: 350 септимов</span>
-        <div class="order-description__text">Украсть меч небес</div>
-      </div>
-    </div>
+<div class="available-orders" [class.loading]="loading">
+  <div class="available-orders__header">
+    Available Orders
   </div>
+
+  <app-order-list [orders]="orders"
+                  (open)="openOrder($event)"></app-order-list>
+
+  <div *ngIf="orders?.length === 0" class="client-order__no-orders">No available orders</div>
 </div>
