--- a/frontend/src/app/styles/_mixins.scss
+++ b/frontend/src/app/styles/_mixins.scss
@@ -6,6 +6,21 @@
   z-index: 1;
 }
 
+@mixin order-list {
+  width: 1059px;
+  height: 730px;
+  padding: 46px 76px;
+
+  &__no-orders {
+    width: 100%;
+    height: 100%;
+    padding-top: 200px;
+    display: flex;
+    justify-content: center;
+    font-size: 24px;
+  }
+}
+
 @mixin header() {
   display: flex;
   justify-content: center;
