--- a/frontend/src/app/modules/employee/available-orders/available-orders.component.html
+++ b/frontend/src/app/modules/employee/available-orders/available-orders.component.html
@@ -6,5 +6,5 @@
   <app-order-list [orders]="orders"
                   (open)="openOrder($event)"></app-order-list>
 
-  <div *ngIf="orders?.length === 0" class="client-order__no-orders">No available orders</div>
+  <div *ngIf="orders?.length === 0" class="available-orders__no-orders">No available orders</div>
 </div>
