--- a/frontend/src/app/modules/client/order/order.component.html
+++ b/frontend/src/app/modules/client/order/order.component.html
@@ -25,4 +25,8 @@
   <div *ngIf="showPayForm" class="client-order__pay">
     <app-pay-form></app-pay-form>
   </div>
+
+  <div *ngIf="showItemLocation" class="client-order__location">
+    <app-item-location></app-item-location>
+  </div>
 </div>
