--- a/frontend/src/app/modules/client/order/pay-form/pay-form.component.html
+++ b/frontend/src/app/modules/client/order/pay-form/pay-form.component.html
@@ -15,7 +15,7 @@
   </div>
 
   <div class="pay-form__control apply">
-    <button [disabled]="form.disabled"
+    <button [disabled]="form.invalid"
             (click)="apply()">Apply</button>
   </div>
 </form>
