--- a/frontend/src/app/modules/employee/available-order/available-order.component.scss
+++ b/frontend/src/app/modules/employee/available-order/available-order.component.scss
@@ -18,8 +18,12 @@
       justify-content: space-between;
 
       button {
-        width: 100px;
+        width: 80px;
         height: 35px;
+
+        &.assign {
+          width: 120px;
+        }
       }
     }
   }
