--- a/frontend/src/app/modules/employee/my-order/my-order.component.scss
+++ b/frontend/src/app/modules/employee/my-order/my-order.component.scss
@@ -11,16 +11,15 @@
     margin-left: 24px;
   }
 
-  &__control {
-    &.actions {
-      margin-top: 110px;
-      display: flex;
-      justify-content: space-between;
+  &__actions {
+    margin-top: 110px;
+    display: flex;
+    justify-content: space-between;
 
-      button {
-        width: 100px;
-        height: 35px;
-      }
+    button {
+      width: 100px;
+      height: 35px;
     }
+
   }
 }
