--- a/frontend/src/app/modules/shared/notification-popup/notification-popup.component.scss
+++ b/frontend/src/app/modules/shared/notification-popup/notification-popup.component.scss
@@ -5,6 +5,7 @@
   justify-content: center;
   align-items: center;
   position: relative;
+  padding: 15px;
 
   &__close {
     position: absolute;
@@ -13,6 +14,7 @@
   }
 
   p {
+    text-align: center;
     font-size: 18px;
     line-height: 21px;
     color: #fff;
