--- a/frontend/src/app/modules/auth/login/login.component.html
+++ b/frontend/src/app/modules/auth/login/login.component.html
@@ -14,6 +14,8 @@
       <label for="password">Password</label>
 
       <input id="password" type="password" autocomplete formControlName="password">
+
+      <div *ngIf="error" class="error">Incorrect login or password</div>
     </div>
 
     <div class="login__form__submit">
