--- a/frontend/src/app/modules/auth/login/login.component.scss
+++ b/frontend/src/app/modules/auth/login/login.component.scss
@@ -13,6 +13,16 @@
   }
 
   &__form {
+    .form-control {
+      position: relative;
+
+      .error {
+        position: absolute;
+        top: 53px;
+        color: #ef5350;
+      }
+    }
+
     &__submit {
       display: flex;
       flex-direction: column;
