--- a/frontend/src/app/modules/client/order/order-form/order-form.component.html
+++ b/frontend/src/app/modules/client/order/order-form/order-form.component.html
@@ -46,12 +46,19 @@
     </ng-template>
 
     <ng-template ngSwitchCase="DECLINED">
+      <button class="cancel" (click)="onCancel()">Close</button>
     </ng-template>
 
     <ng-template ngSwitchCase="APPROVED">
+      <button class="cancel" (click)="onCancel()">Close</button>
     </ng-template>
 
     <ng-template ngSwitchCase="PAYED">
+      <button class="cancel" (click)="onCancel()">Close</button>
+    </ng-template>
+
+    <ng-template ngSwitchCase="COMPLETED">
+      <button class="cancel" (click)="onCancel()">Close</button>
     </ng-template>
 
     <ng-template ngSwitchDefault>
