--- a/frontend/src/app/shared/search-select/search-select.component.html
+++ b/frontend/src/app/shared/search-select/search-select.component.html
@@ -1,4 +1,4 @@
-<mat-select [formControl]="valueControl" #select>
+<mat-select [formControl]="valueControl">
   <mat-option>
     <ngx-mat-select-search [formControl]="filterControl"></ngx-mat-select-search>
   </mat-option>
