--- a/frontend/src/app/client/order/order-form/pickpocketing-order-form/pickpocketing-order-form.component.html
+++ b/frontend/src/app/client/order/order-form/pickpocketing-order-form/pickpocketing-order-form.component.html
@@ -6,8 +6,8 @@
 
   <div class="form-control" [class.disabled]="form.disabled">
     <label appRequired>The title of the robbed person</label>
-    <mat-select formControlName="title">
-      <mat-option *ngFor="let title of (titles$ | async)" [value]="title">
+    <mat-select formControlName="title" [compareWith]="compareEntity">
+      <mat-option *ngFor="let title of titles" [value]="title">
         {{title.name}}
       </mat-option>
     </mat-select>
@@ -15,8 +15,7 @@
 
   <div class="form-control" [class.disabled]="form.disabled">
     <label appRequired>Item</label>
-    <app-search-select formControlName="item" [data]="items">
-    </app-search-select>
+    <app-search-select formControlName="item" [data]="items"></app-search-select>
   </div>
 
   <div class="form-control" [class.disabled]="form.disabled">
